css/style.css
@font-face {
    font-family: 'damion';
    src: url('/fonts/damion-regular-webfont.eot');
    src: url('/fonts/damion-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/damion-regular-webfont.woff') format('woff'),
         url('/fonts/damion-regular-webfont.ttf') format('truetype'),
         url('/fonts/damion-regular-webfont.svg#damionregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
  margin: 40px 0 0;
  background: #bcd371;
}

footer {
  margin-top: 120px;
  font-size: 75%;
}

article {
  padding-top: 40px;
  font-size: 16px;
  line-height: 150%;
}

.content {
  background: #f8f8f8;
  margin: 0 -40px;
  padding: 0 40px 20px;
  border-radius: 6px;
}

.navbar .brand, h1, h2, h3 {
  font-family: "damion", "Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #ff0000;
}

@media (max-width: 979px) {
  body {
    margin-top: 0;
  }
}

